validate and error hadle
